# tws_tradingbot

./: .env.example  .gitignore  Dockerfile  README.md  agent_prompts.md  app.go  app_config.go  app_watchlist.go  architecture.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  ideas.md  main.go  main.py  patch_api.js  patch_api_fix.js  planning.md  pyproject.toml  refactor.md  requirements-ml.txt  requirements.txt  roadmap.md  run_api.sh  run_bot.sh  run_ui.sh  run_web.sh  wails.json
.github/: copilot-instructions.md
.github/prompts/: implementnotes.prompt.md  note.prompt.md
.github/workflows/: release.yml
.streamlit/: config.toml
backend/bot/: engine.go  engine_test.go  ibkr.go  ibkr_test.go  runner.go  runner_test.go
backend/db/: cockpit.go  cockpit_test.go  config.go  sqlite.go  watchlist.go  watchlist_test.go
backend/models/: runtime.go  schemas.go  strategy.go
backend/strategy/: evaluator.go  evaluator_test.go  math.go
config/: .bot_ledger.json  .bot_state.json  active_strategy.json  cockpit.json  default.yaml  watchlist.json  watchlist.txt
data/: symbol_cache.json
data/sample/: SPY_5min.csv  VIX_5min.csv
deploy/: Caddyfile  ibc-run-ibc.sh
docs/: paper_plan.md  paper_soak_runbook.md  project_ideas.md  strategy_guide.md
frontend/: add_translations.cjs  add_translations.js  package-lock.json  package.json  package.json.md5  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: Sidebar.svelte  SymbolMultiSelect.svelte
frontend/src/lib/i18n/: translations.ts
frontend/src/lib/stores/: runtime.ts  ui.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/cockpit/: +page.svelte
frontend/src/routes/manual/: +page.svelte
frontend/src/routes/strategy/: +page.svelte
frontend/src/routes/watchlist/: +page.svelte
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
src/api/: main.py  schemas.py  utils.py
src/api/routers/: backtest.py  cockpit.py  config.py  diagnostics.py  notifications.py  state.py  strategy.py  symbols.py  watchlist.py  ws.py
src/api/services/: backtest.py  notifications.py
src/bot/: adapter.py  backtest_runner.py  data_provider.py  engine.py  execution.py  instruments.py  live_runner.py  optimizer.py  order_manager.py  risk_manager.py  state.py  strategy.py  tws_data_provider.py
src/bot/strategy/: __init__.py  base.py  pine_script.py  validator.py
src/bot/strategy/rules/: __init__.py  conditions.py  engine.py  evaluator.py  indicators.py  market_data.py  models.py  serialization.py
src/config/: __init__.py  active_strategy.json  database.py  migrations.py  settings.py  validation.py
src/ui/: __init__.py  app.py  dashboard.py  i18n.py  main.py  styles.py  translations.py
src/ui/components/: __init__.py  charts.py  rule_builder.py  rule_chart.py  rule_display.py  symbol_search.py  watchlist.py
src/ui/tabs/: __init__.py  monitoring.py  strategy.py
src/utils/: data_loader.py  indicators.py  logger.py  market_hours.py  ml_models.py  notifications.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_rule_evaluation.py  test_strategy_workflow.py  test_ws_streams.py
tests/unit/: test_cockpit_state.py  test_database.py  test_execution_planner.py  test_indicators.py  test_market_hours.py  test_pine_script.py  test_rule_engine.py  test_runtime_control.py  test_strategy_presets.py  test_ui_styles.py
tmp/: bot_api_check.sh  ibc_install.sh  ibgateway.service
tools/: visualize_indicators.py
web/: Dockerfile  package-lock.json  package.json  svelte.config.js
web/src/: app.css
web/src/lib/: api.ts  ws.ts
web/src/lib/components/: Sidebar.svelte  SymbolSearch.svelte
web/src/lib/docs/: index.ts  types.ts
web/src/lib/i18n/: index.ts  translations.ts
web/src/lib/stores/: botState.ts  runtime.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
web/src/routes/backtest/: +page.svelte
web/src/routes/cockpit/: +page.svelte
web/src/routes/docs/: +page.svelte  +page.ts
web/src/routes/docs/[slug]/: +page.svelte  +page.ts
web/src/routes/monitoring/: +page.svelte
web/src/routes/notifications/: +page.svelte
web/src/routes/strategy/: +page.svelte
web/src/routes/watchlist/: +page.svelte
